# SearchEngine

./: CMakeLists.txt  README.md
include/jceSearchEngine/: item.hpp  nameSearch.hpp
optimization/: CMakeLists.txt  optimize.cpp  plot.py
optimization/include/: headers.hpp  sort.hpp  timer.hpp
optimization/src/: headers.cpp  sort.cpp
test/: CMakeLists.txt  test.cpp
